# tradingview-utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/tradingview_utils/: __init__.py  cookies.py  screener.py  utils.py  websocket.py
tests/: test_cookies.py
