[tool.poetry]
name = "tradingview-utils"
version = "0.0.1"
description = ""
authors = ["Shneor <770elmo@gmail.com>"]
readme = "README.md"
packages = [{include = "tradingview_utils", from = "src"}]

[project]
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9"
tradingview-screener = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"
pdoc = "^15.0.1"
pytest = "^8.3.4"
pyright = "^1.1.393"
ipython = "^8.16.1"  # keep this locked to this version for backwards compatibility

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
